# Xenon

./: .gitignore  CMakeLists.txt  README.md  xenon.sh
docs/: MAT_FORMAT.md
log/: summary.csv
scenes/: cornell_box.xenon
scenes/combined_outdoor/: combined_outdoor.xenon
scenes/cornell_box/: cornell_box.xenon  cornell_empty.xenon  gen_empty_scene.py  gen_scene.py
scenes/cornell_box/materials/: back.mat  ceiling.mat  floor.mat  left.mat  light.mat  right.mat  white.mat
scenes/cow/: cow.xenon  gen_scene.py
scenes/cow/materials/: glossy_metal.mat
scenes/instancing_grid/: instancing_grid.xenon
scenes/lucy/: gen_scene.py  lucy.xenon
scenes/lucy/materials/: clay.mat  glass.mat
scenes/outdoor_sun/: outdoor_sun.xenon
scenes/outdoor_sun/materials/: gray.mat  red_glossy.mat  white.mat
scenes/prim_types/: prim_types.xenon
scenes/sky_dome/: sky_dome.xenon
scripts/: gen_cornell.py
src/: main.cpp
src/camera/: camera.h  sampler.h
src/cuda/: cuda_renderer.cu  cuda_renderer.cuh  cuda_utils.cuh  gpu_bsdf.cuh  gpu_scene.cu  gpu_scene.cuh  gpu_traverse.cuh  gpu_types.cuh
src/display/: window.cpp  window.h
src/geometry/: aabb.h  blas.cpp  blas.h  bvh.cpp  bvh.h  mesh.cpp  mesh.h  prim_blas.cpp  prim_blas.h  primitives.h  tlas.cpp  tlas.h  transform.h
src/material/: bsdf.cpp  bsdf.h  material.cpp  material.h
src/math/: image.h  mat4.h  ray.h  simd.h  vec3.h
src/render/: cpu_tiled.cpp  integrator.cpp  integrator.h  swapchain.h  thread_pool.h  wavefront.cpp  wavefront.h  wavefront_state.h
src/scene/: environment.h  scene.h  scene_file.cpp  scene_file.h
tests/: bsdf_test.cpp  geometry_test.cpp  math_test.cpp  sampler_test.cpp  wavefront_test.cpp
